// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthVerifyPage > navigates home when token is missing 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <h1
            class="typography title medium"
          >
            One moment… verifying your magic link!
          </h1>
          <div
            class="loadingSpinnerContainer"
            data-testid="loading-spinner"
          >
            <div />
            <div />
            <div />
          </div>
          <p
            class="typography text small"
          >
            Good things come to those who wait!
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthVerifyPage > renders verified state (logged in) with home link 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      />
    </div>
    <div
      class="content centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="badge large border"
            style="outline-color: white; color: white;"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-check"
              data-icon="check"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M434.8 70.1c14.3 10.4 17.5 30.4 7.1 44.7l-256 352c-5.5 7.6-14 12.3-23.4 13.1s-18.5-2.7-25.1-9.3l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l101.5 101.5 234-321.7c10.4-14.3 30.4-17.5 44.7-7.1z"
                fill="currentColor"
              />
            </svg>
          </div>
          <h1
            class="typography title medium"
          >
            Hooray! Your email’s all set!
          </h1>
          <p
            class="typography text medium"
          >
            Welcome aboard the fun train. Let’s roll!
          </p>
          <a
            class="typography link small"
            data-discover="true"
            href="/"
          >
            Take me home
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthVerifyPage > renders verified state (logged out) with login link 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="badge large border"
            style="outline-color: white; color: white;"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-check"
              data-icon="check"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M434.8 70.1c14.3 10.4 17.5 30.4 7.1 44.7l-256 352c-5.5 7.6-14 12.3-23.4 13.1s-18.5-2.7-25.1-9.3l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l101.5 101.5 234-321.7c10.4-14.3 30.4-17.5 44.7-7.1z"
                fill="currentColor"
              />
            </svg>
          </div>
          <h1
            class="typography title medium"
          >
            Hooray! Your email’s all set!
          </h1>
          <p
            class="typography text medium"
          >
            Welcome aboard the fun train. Let’s roll!
          </p>
          <a
            class="typography link small"
            data-discover="true"
            href="/auth/login"
          >
            Log in to get started!
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthVerifyPage > shows error state when verification fails 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="badge large border"
            style="outline-color: white; color: white;"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-xmark"
              data-icon="xmark"
              data-prefix="fas"
              role="img"
              viewBox="0 0 384 512"
            >
              <path
                d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
                fill="currentColor"
              />
            </svg>
          </div>
          <h1
            class="typography title medium"
          >
            Oops! Something went wrong.
          </h1>
          <p
            class="typography text medium"
          >
            The supplied link is invalid or has expired.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthVerifyPage > shows loading while verifying with token present 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <h1
            class="typography title medium"
          >
            One moment… verifying your magic link!
          </h1>
          <div
            class="loadingSpinnerContainer"
            data-testid="loading-spinner"
          >
            <div />
            <div />
            <div />
          </div>
          <p
            class="typography text small"
          >
            Good things come to those who wait!
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
